Fixed styling issues on mobile

--- a/src/components/Jumbotron/Jumbotron.css
+++ b/src/components/Jumbotron/Jumbotron.css
@@ -1,6 +1,5 @@
 .jumbotron {
     margin: 64px auto 0 auto; /*accomodate for height of navbar*/
-    height: 23rem;
     width: 80%;
     max-width: 1500px;
     display: flex;
